force-app/main/default/objects/Incident_Financial_Account__c/Incident_Financial_Account__c.object-meta.xml
<CustomObject>
    <description>Relationship between Customer or Employee Fraud Incidents and Customer or Internal Financial Accounts</description>
    <label>Incident Financial Account</label>
    <nameField>
        <displayFormat>IFA-{00000000}</displayFormat>
        <label>Incident Financial Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>