force-app/main/default/objects/Incident_Financial_Account__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Related Incidents</relationshipLabel>
    <relationshipName>Incident_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>