force-app/main/default/objects/Incident_Financial_Account__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud Loss</fullName>
            </value>
            <value>
                <fullName>Fraud Benefit</fullName>
            </value>
            <value>
                <fullName>Operational Impact</fullName>
            </value>
            <value>
                <fullName>Data Breach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>