force-app/main/default/objects/Incident_Financial_Account__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Incident Financial Accounts</relationshipLabel>
    <relationshipName>Incident_Financial_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>